iceapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iceapi
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: iceapi
