ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iceapi
spec:
  rules:
  - host: api.ahernandez.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: iceapi
            port:
              number: 80
